# simplesynth

./: .gitattributes  .gitignore  README.md  claude.md  generate_melody_sustained.sh  test_harness.py
SimpleSynth/: CMakeLists.txt
SimpleSynth/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SimpleSynthHost/: CMakeLists.txt
SimpleSynthHost/Source/: Main.cpp
lessons/: README.md  current-lesson.md
